# [m]- blahalhjaljkalkjlajazkljklqjsd qslkdjqs lkdjqsl
#      qmlfkmzkk qskdjfmqslfk mlqzemfj qmlj mldf
#
# date start with a number and can then include anything, they are like comments
# 23/07/2002 - T.o.M.E 2.0.0 aka "Point of No Return"

# special tag to specify the current version
[V]  TomeNET 4.0.0 aka "The Gathering"

# bug.txt should follow the exact same format

11/09/2002
[D]- Adjusted some traps

09/09/2002
[P]- Casting spells cost a turn ;)
[m]- New news.txt

06/09/2002
[I]- Spells can ask for items client side directly
[P]- Telekinesis spell, Mind/Conveyance school

05/09/2002
[O]- Artifact ammo returns just like magci arrows, thanks to Cblue
[m]- Savefile version independant of game version
[P]- New spell system nearly done
[P]- New Meta spell: Project Spell, it is a toggle, cast it and
     quite a few of yoru utility spells will affect a zone around you.
     (Which spells are affected is writen in their desc). And when you
     cast a spell, for example healing, all players nearby will be
     healed

05/09/2002 (Jir)
[G]- EFF_WAVE and EFF_STORM implemented (still some bugs inside)
[G]- Firewall (Fire) implemented and fixed.
[G]- item owner check for Spellbooks ( {Olorin, 25} )
[G]- Calmness/Intercept are made cheaper (b/c of new spell system)
[I]- admin can build terrains of any kind (but CS is not assigned!)
[P]- Adventurer/Bard receives one semi-random starting item
[P]- class skills touched, esp. Priests
[m]- Bard class is renamed to "Libertine" (still not satisfactory)
[m]- Thunderlords.
[m]- niceties for admin char.
[B]- Health recovery was useless with high Con.
[B]- some attacking spells worked wrong (project_m)

03/09/2002
[O]- Admins not affected by perma_curse

02/09/2002 (Jir)
[m]- '#ifdef TOMENET_WORLDS' added (so that I can compile it :)
[O]- randart ego items can no longer be created.
[I]- school spellbooks are browsable in stores.
[I]- '/'(cmd_all_in_one) can handle schooled books.